Fixed title visibility

--- a/static/css/master.css
+++ b/static/css/master.css
@@ -20,14 +20,14 @@ h3 {
   font-family: 'Lato', sans-serif;
   font-size: 22px;
   font-weight: 700;
-  color: #f0f0f0;
+  color: #ffffff;
   margin-bottom: -12px;
 }
 h4 {
   font-family: 'Lato', sans-serif;
   font-size: 16px;
   font-weight: 900;
-  color: #eeeeee;
+  color: #ffffff;
   letter-spacing: 1.5px;
   margin: 0px;
 }
@@ -83,15 +83,18 @@ footer h5 {
 }
 
 #stats {
-  height: 40px;
+  height: 37px;
   display: none;
   position: relative;
   border-radius: 8px;
   margin-bottom: 5px;
   overflow: hidden;
+  background-color: rgba(0, 0, 0, .1);
+  box-shadow: rgba(68, 68, 100, 0.2) 0px 2px 2px,
+              rgba(68, 68, 100, 0.2) 0px 4px 4px;
 }
 #stats div {
-  margin-top: 10px;
+  margin-top: 9px;
 }
 #stats #left {
   float: left;
@@ -105,14 +108,14 @@ footer h5 {
   position: absolute;
   top: -100%;
   left: -25%;
-  filter: blur(50px) saturate(200%);
+  filter: blur(30px) saturate(200%);
   width: 150%;
   height: 300%;
   z-index: -1;
 }
 #skip {
-  width: 60px;
-  height: 40px;
+  width: 80px;
+  height: 37px;
   font-family: 'Lato', sans-serif;
   display: inline-block;
   cursor: pointer;
@@ -156,7 +159,7 @@ footer h5 {
   flex-direction: column;
 }
 #focus {
-  min-width: 20px;
+  min-width: 310px;
   min-height: 20px;
   max-height: 90vh;
   max-width: 80vw;
@@ -165,7 +168,10 @@ footer h5 {
   overflow: hidden;
   transition: .4s all;
   display: none;
-  box-shadow: rgba(68, 68, 100, 0.2) 0px 2px 2px, rgba(68, 68, 100, 0.2) 0px 4px 4px, rgba(68, 68, 100, 0.2) 0px 8px 8px, rgba(68, 68, 100, 0.2) 0px 16px 16px;
+  box-shadow: rgba(68, 68, 100, 0.2) 0px 2px 2px,
+              rgba(68, 68, 100, 0.2) 0px 4px 4px,
+              rgba(68, 68, 100, 0.2) 0px 8px 8px,
+              rgba(68, 68, 100, 0.2) 0px 16px 16px;
 }
 
 #display {
@@ -205,10 +211,11 @@ footer h5 {
 
 #img {
   max-height: calc(80vh - 170px);
-  min-width: 220px;
+  min-width: 20px;
   max-width: 80vw;
   object-fit: cover;
   display: block;
+  margin:0px auto;
 }
 #expand {
   width: 30px;
@@ -230,12 +237,13 @@ footer h5 {
   overflow: hidden;
   z-index: 100;
   display: block;
+  background-color: rgba(0, 0, 0, .1);
   -webkit-box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.2);
 }
 #title {
-  text-shadow: 0px 1px 12px rgba(150, 150, 150, 0.1);
+  text-shadow: 0px 1px 12px rgba(150, 150, 150, 0.3);
   margin-left: 12px;
   margin-bottom: 20px;
   z-index: 1000;
